# wasm_shared_worker

./: Cargo.toml  README.md  index.html  index.js  package-lock.json  shared_worker.js
_old/: index.html  index.js
src/: error.rs  lib.rs
web/: .prettierrc  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest-setup-client.ts  webpack.config.js
web/public/: index.html
web/src/: main.ts
web/src/lib/: shared-worker.ts  types.ts  worker.ts
web/src/routes/: +page.svelte
xet_wasm/: Cargo.toml  README.md
xet_wasm/src/: error.rs  lib.rs  types.rs
