[package]
name = "xet_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
merklehash = { git = "https://github.com/huggingface/xet-core.git" }

[dependencies.web-sys]
version = "0.3.77"
features = [
  "Window",
  "SharedWorkerGlobalScope",
  "EventTarget",
  "WorkerGlobalScope",
  "SharedWorker",
  "File",
  "Blob",
  "console",
]
